module1/src/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: module1
  name: module1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: module1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: module1
    spec:
      containers:
      - image: enschede/kubernetes-module1:0.0.6-SNAPSHOT
        imagePullPolicy: Always
        name: kubernetes-module1
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu 400m
            memory: 1024Mi
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
