module1/src/deployment/deploymentVolume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: module1
  name: module1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: module1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: module1
    spec:
      containers:
      - image: enschede/kubernetes-module1:0.0.5-SNAPSHOT
        volumeMounts:
          - mountPath: /externalvolume
            name: pvc1
        imagePullPolicy: Always
        name: kubernetes-module1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
        - name: pvc1
          persistentVolumeClaim:
            claimName: module1-pvc
#        - name: emptydir-pvc
#          # Directory in de container, is niet persistant
#          emptyDir: {}
#        - name: host1
#          # Directory op host, prima setting in Docker Desktop
#          hostPath:
#            path: /Users/marc/mnt
#            type: Directory
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
