module1/src/deployment/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: module1
  name: module1-nodeport
  namespace: default
spec:
  ports:
    - nodePort: 30286
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: module1
  sessionAffinity: None
  type: NodePort
