module1/src/deployment/svc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: module1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: module1
spec:
  rules:
    - http:
        paths:
          - path: /testpath/*
#            pathType: Prefix
            backend:
              serviceName: module1
              servicePort: 8080
